--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">SpeachAndLanguage</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="test_1">test 1</string>
+    <string name="test_2">test 2</string>
 
 </resources>
