--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,17 +7,13 @@
     <string name="test_1">test 1</string>
     <string name="test_2">test 2</string>
     <string name="title_activity_settings">Settings</string>
-    <string name="language_eg">Language:</string>
-    <string name="language_sp">Idioma:</string>
+    <string name="language">Language:</string>
 
-    <string-array name="language_eg">
+    <string-array name="languages">
         <item>English</item>
         <item>Spanish</item>
     </string-array>
 
-    <string-array name="language_sp">
-        <item>Ingles</item>
-        <item>Espanol</item>
-    </string-array>
+
 
 </resources>
