--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -7,6 +7,19 @@
     <string name="test_2">test 2-sp</string>
     <string name="title_activity_settings">Sp-Settings</string>
     <string name="language">Language:-sp</string>
+    <string name="continuing">Continuo</string>
+    <string name="newbtn">Nuevo</string>
+    <string name="student_info">Student Information</string>
+    <string name="first_name">First name</string>
+    <string name="last_name">Last name</string>
+    <string name="date_of_birth">Date of birth</string>
+    <string name="teacher">Teacher</string>
+    <string name="age">Age</string>
+    <string name="grade">Grade</string>
+    <string name="screenings">Date of Screenings</string>
+    <string name="hearing">Hearing</string>
+    <string name="vision">Visiion</string>
+    <string name="speach"><![CDATA[Speach & Language]]></string>
 
     <string-array name="languages">
         <item>Ingles</item>
