--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -20,6 +20,7 @@
     <string name="hearing">Hearing</string>
     <string name="vision">Visiion</string>
     <string name="speach"><![CDATA[Speach & Language]]></string>
+    <string name="next">Next</string>
 
     <string-array name="languages">
         <item>Ingles</item>
