--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,11 @@
     <string name="vision">Vision</string>
     <string name="speach"><![CDATA[Speach & Language]]></string>
     <string name="next">Next</string>
+    <string name="done">Done</string>
+    <string name="vision_title">Date of vision screen.</string>
+    <string name="date_of_birth_title">Date of birth.</string>
+    <string name="hearing_title">Date of hearing screen.</string>
+    <string name="speach_and_language_title">Speach $ Language screening date.</string>
 
     <string-array name="languages">
         <item>English</item>
