--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -21,6 +21,10 @@
     <string name="vision">Visiion</string>
     <string name="speach"><![CDATA[Speach & Language]]></string>
     <string name="next">Next</string>
+    <string name="error_first_name">Error: Require first name.</string>
+    <string name="error_date_of_birth">Error: Require date of birth.</string>
+    <string name="error_age">Error: require age.</string>
+    <string name="error_hearing_to_old">Error: Hearing screen was to long ago.</string>
 
     <string-array name="languages">
         <item>Ingles</item>
