--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,12 @@
     <string name="date_of_birth_title">Date of birth.</string>
     <string name="hearing_title">Date of hearing screen.</string>
     <string name="speach_and_language_title">Speach $ Language screening date.</string>
+    <string name="error_first_name">Error: Require first name.</string>
+    <string name="error_last_name">Error: Require last name.</string>
+    <string name="error_date_of_birth">Error: Require date of birth.</string>
+    <string name="error_age">Error: require age.</string>
+    <string name="error_hearing_to_old">Error: Hearing screen was to long ago.</string>
+    <string name="error_vision_to_old">Error: Vision screen was to long ago.</string>
 
     <string-array name="languages">
         <item>English</item>
