--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">SpeachAndLanguage</string>
+    <string name="app_name">Speach Language</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="test_1">test 1</string>
@@ -42,6 +42,10 @@
     <string name="error_hearing_required">Date of hearing screen is required.</string>
     <string name="error_vision_required">Error: Date of vision screen is required.</string>
     <string name="error_speach_required"><![CDATA[Error Date of speach & language screen is required.]]></string>
+    <string name="scoring_only">Scoring Buttons Only</string>
+    <string name="text_only">Text Input Only</string>
+    <string name="Both">Both Scoring Buttons and Text Input</string>
+    <string name="new_screening">New</string>
 
     <string-array name="languages">
         <item>English</item>
