--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,8 @@
     <string name="test_1">test 1</string>
     <string name="test_2">test 2</string>
     <string name="title_activity_settings">Settings</string>
-    <string name="language">Language:</string>
+    <string name="app_language">App language:</string>
+    <string name="questions_language">Questions language:</string>
     <string name="neuro_leap">Neuro Leap</string>
     <string name="bridge_to">Bridge to Empowerment!</string>
     <string name="win3">WIN 3 System - SLP</string>
@@ -48,12 +49,19 @@
     <string name="new_screening">New</string>
 
     <string-array name="languages">
-        <item>English</item>
-        <item>Spanish</item>
+        <item>English/Ingles</item>
+        <item>Espanol/Spanish</item>
     </string-array>
+
     <string-array name="pass_fail">
         <item>pass</item>
         <item>fail</item>
+    </string-array>
+
+    <string-array name="test_mode">
+        <item>Scoring buttons only</item>
+        <item>Text input only</item>
+        <item>Text and scoring buttons</item>
     </string-array>
 
     <string name="title_activity_start_up">Screens</string>
@@ -61,5 +69,9 @@
     <string name="screening_completed">Completed</string>
     <string name="screening_not_completed">Not completed</string>
     <string name="screening_not_started">Not started</string>
+    <string name="student_info_title">Student Info</string>
+    <string name="test_mode_spn">Test mode:</string>
+    <string name="years">years</string>
+    <string name="months">months</string>
 
 </resources>
