Add custom buttons for for screening main menu. Add layout for screening main menu. Add stub fragment to display screening main menu.  Add category type and mental age to database.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -39,6 +39,7 @@
     <string name="years">years</string>
     <string name="cancel">Cancel</string>
     <string name="no_screenings">No screenings.  Press  NEW  to create a new screening.</string>
+    <string name="main_menu">Main Menu</string>
 
     <string-array name="languages">
         <item>English/Ingles</item>
