--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,6 +64,18 @@
         <item>Text and scoring buttons</item>
     </string-array>
 
+    <string-array name="question_categories">
+        <item>Semantics</item>
+        <item>Processing</item>
+        <item>Inferences</item>
+        <item>Idioms</item>
+        <item>Syntax</item>
+        <item>Auditory Processing</item>
+        <item>Auditory Memory</item>
+        <item>Unknown</item>
+        <item>Unknown</item>
+    </string-array>
+
     <string name="title_activity_start_up">Screens</string>
     <string name="screenings_title">Screenings</string>
     <string name="screening_completed">Completed</string>
@@ -75,5 +87,6 @@
     <string name="months">months</string>
     <string name="cancel">Cancel</string>
     <string name="no_screenings">No screenings.  Press  NEW  to create a new screening.</string>
+    <string name="main_menu">Main Menu</string>
 
 </resources>
