Add Screenings, Results and Questions buttons to screening list items. Add listeners for the the buttons to the adapter.  Add listener to StartupActivity to listen to adapter.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -40,6 +40,9 @@
     <string name="cancel">Cancel</string>
     <string name="no_screenings">No screenings.  Press  NEW  to create a new screening.</string>
     <string name="main_menu">Main Menu</string>
+    <string name="overview">Overview</string>
+    <string name="questions">Questions</string>
+    <string name="results">Results</string>
 
     <string-array name="languages">
         <item>English/Ingles</item>
