Add GridView of Image buttons, Other EditText and Results, Screenings, Overview Buttons to Fragment_semantics_body_parts layout file.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,5 +91,6 @@
     <string name="overview">Overview</string>
     <string name="questions">Questions</string>
     <string name="results">Results</string>
+    <string name="other">Other</string>
 
 </resources>
