--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -43,6 +43,7 @@
     <string name="overview">Overview</string>
     <string name="questions">Questions</string>
     <string name="results">Results</string>
+    <string name="other">Other</string>
 
     <string-array name="languages">
         <item>English/Ingles</item>
