Implement functionality of icon answer buttons including changing background color and returning fragment to original state when swiping fragments.  Implement buttons at bottom of question fragments screens. Fix bug when returning to a question fragment from settings activity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,5 +91,6 @@
     <string name="questions">Questions</string>
     <string name="results">Results</string>
     <string name="other">Other</string>
+    <string name="answer">"Answer "</string>
 
 </resources>
