--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -44,6 +44,7 @@
     <string name="questions">Questions</string>
     <string name="results">Results</string>
     <string name="other">Other</string>
+    <string name="answer">"Answer "</string>
 
     <string-array name="languages">
         <item>English/Ingles</item>
