--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,5 +92,6 @@
     <string name="results">Results</string>
     <string name="other">Other</string>
     <string name="answer">"Answer "</string>
+    <string name="profile">Profile</string>
 
 </resources>
