--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -10,7 +10,7 @@
     <string name="questions_language">Preguntas idioma:</string>
     <string name="continuing">Continuo</string>
     <string name="newbtn">Nuevo</string>
-    <string name="student_info">Student Information</string>
+    <string name="student_info">Student Profile</string>
     <string name="first_name">First name</string>
     <string name="last_name">Last name</string>
     <string name="date_of_birth">Date of birth</string>
@@ -34,12 +34,12 @@
     <string name="new_screening">New screening</string>
     <string name="screenings_title">Screenings</string>
     <string name="screening_not_started">Not started</string>
-    <string name="student_info_title">Student Info</string>
+    <string name="student_info_title">Student Profile</string>
     <string name="test_mode_spn">Test mode:</string>
     <string name="years">years</string>
     <string name="cancel">Cancel</string>
     <string name="no_screenings">No screenings.  Press  NEW  to create a new screening.</string>
-    <string name="main_menu">Main Menu</string>
+    <string name="main_menu">Overview</string>
     <string name="overview">Overview</string>
     <string name="questions">Questions</string>
     <string name="results">Results</string>
