--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,6 +63,11 @@
         <item>Text and scoring buttons</item>
     </string-array>
 
+    <string-array name="audio_record">
+        <item>On</item>
+        <item>Off</item>
+    </string-array>
+
     <string-array name="question_categories">
         <item>Semantics</item>
         <item>Processing</item>
@@ -99,5 +104,9 @@
     <string name="passed">Passed</string>
     <string name="failed">Failed</string>
     <string name="total">Total</string>
+    <string name="audio_record">Audio Record</string>
+    <string name="no_sdcard">No SD card installed.  You will not be able to record audio.</string>
+    <string name="want_to_continue">Do you want to continue?</string>
+    <string name="yes">YES</string>
 
 </resources>
