--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -75,6 +75,11 @@
     <string name="date_of_vison">"Date of Vision Screen: "</string>
     <string name="screening_not_complete">Screening is not completed</string>
     <string name="screening_complete">Screening is complete</string>
+    <string name="category">Category</string>
+    <string name="completion_state">Completion State</string>
+    <string name="number_correct">Number Correct</string>
+    <string name="percent_correct">Percentage Correct</string>
+    <string name="pass_fail">Pass/Fail</string>
 
 
     <string-array name="languages">
