--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -80,6 +80,10 @@
     <string name="number_correct">Number Correct</string>
     <string name="percent_correct">Percentage Correct</string>
     <string name="pass_fail">Pass/Fail</string>
+    <string name="answer_type">Answer Type</string>
+    <string name="question">Question</string>
+    <string name="the_answer">Answer</string>
+    <string name="score">Score</string>
 
 
     <string-array name="languages">
