--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -84,6 +84,7 @@
     <string name="question">Question</string>
     <string name="the_answer">Answer</string>
     <string name="score">Score</string>
+    <string name="results_detail">Results Detail</string>
 
 
     <string-array name="languages">
