Fix bug where device rotation lost actionBar items on screenings screen. Some buttons on Over View screen are not used yet, or are invalid because of age. These buttons are now greyed out and don't respond to button presses. Fix color of text problems on spinners used in various parts of the project. Fixed bugs in raising and lower soft key board in question fragments, and student info fragment.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -89,6 +89,7 @@
     <string name="icon">Icon</string>
     <string name="detailed_reports">Detailed Reports</string>
     <string name="delete_file">Delete File?</string>
+    <string name="delete_screening">Delete Screening?</string>
 
 
     <string-array name="languages">
