--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Speach &amp; Language</string>
+    <string name="app_name">Speech &amp; Language</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="test_1">test 1</string>
@@ -12,7 +12,7 @@
     <string name="neuro_leap">Neuro Leap</string>
     <string name="bridge_to">Bridge to Empowerment!</string>
     <string name="win3">WIN 3 System - SLP</string>
-    <string name="SpcAndLang"><![CDATA[Speach & Language]]></string>
+    <string name="SpcAndLang"><![CDATA[Speech & Language]]></string>
     <string name="screening">Screening</string>
     <string name="continuing">Continuing</string>
     <string name="newbtn">New</string>
@@ -27,13 +27,13 @@
     <string name="screenings">Dates of Screenings:</string>
     <string name="hearing">Hearing</string>
     <string name="vision">Vision</string>
-    <string name="speach"><![CDATA[Speach & Language]]></string>
+    <string name="speach"><![CDATA[Speech & Language]]></string>
     <string name="next">Next</string>
     <string name="done">Done</string>
     <string name="vision_title">Date of vision screen.</string>
     <string name="date_of_birth_title">Date of birth.</string>
     <string name="hearing_title">Date of hearing screen.</string>
-    <string name="speach_and_language_title">Speach $ Language screening date.</string>
+    <string name="speach_and_language_title">Speech $ Language screening date.</string>
     <string name="error_first_name">Error: Require first name.</string>
     <string name="error_last_name">Error: Require last name.</string>
     <string name="error_date_of_birth">Error: Require date of birth.</string>
@@ -42,7 +42,7 @@
     <string name="error_vision_to_old">Error: Vision screen was to long ago.</string>
     <string name="error_hearing_required">Date of hearing screen is required.</string>
     <string name="error_vision_required">Error: Date of vision screen is required.</string>
-    <string name="error_speach_required"><![CDATA[Error Date of speach & language screen is required.]]></string>
+    <string name="error_speach_required"><![CDATA[Error Date of speech & language screen is required.]]></string>
     <string name="scoring_only">Scoring Buttons Only</string>
     <string name="text_only">Text Input Only</string>
     <string name="Both">Both Scoring Buttons and Text Input</string>
@@ -121,7 +121,7 @@
     <string name="x_axis_label">Question Categories</string>
     <string name="email_report">Email\nReport</string>
     <string name="can_not_generate_report">No SD card installed. Can\'t generate report.</string>
-    <string name="Screening_report">Speach and Language Screening Report</string>
+    <string name="Screening_report">Speech and Language Screening Report</string>
     <string name="test_date">"Test Date: "</string>
     <string name="age_at_time">"Age at time of screening: "</string>
     <string name="grade_at_time">"Grade at time of screening: "</string>
